[package]
name = "rcrosshair"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.9"
image = { version = "0.25.9", features = ["gif"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smithay-client-toolkit = "0.20.0"
thiserror = "2.0.18"
wayland-client = "0.31.12"
